# gro

./: README.md  pyproject.toml
examples/: todo.py
gro/: __init__.py  core.py
